[package]
name = "sp"
version = "0.1.2"
authors = ["Igor <ivkovityigor@gmail.com>"]
edition = "2018"
documentation = "https://github.com/ivkovici/sp"
repository = "https://github.com/ivkovici/sp"
readme = "README.md"
description = "This cli opens files from Windows routes and translates Linux routes to Windows routes."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "1.4.0"
yansi = "0.5.0"
pickledb = "0.4.1"
serde = "1.0.112"
copypasta-ext = "0.3.1"
dirs = "3.0.1"
structopt = "0.3.15"
os_info = "3.0.0"
